--- a/src/styles/layout/_navigation.scss
+++ b/src/styles/layout/_navigation.scss
@@ -37,7 +37,7 @@
       justify-content: flex-end;
       font-weight: 500;
       text-decoration: underline;
-      @media only screen and (min-width:378px) {
+      @include media-query(small) {
        font-size: small;
       }
       @include media-query(medium) {
