--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,18 +1,19 @@
 @import "utils/settings";
 @import "utils/variables";
-@import "./components/banner";
-@import "./components/collapse";
-@import "./components/cards";
-@import "./components/rating";
-@import "./components/server";
-@import "./components/slider";
-@import "./components/tags";
-@import "./components/mainbanner";
 
-@import "./layout/navigation";
-@import "./layout/footer";
+@import "components/banner";
+@import "components/collapse";
+@import "components/cards";
+@import "components/rating";
+@import "components/realestate";
+@import "components/server";
+@import "components/slider";
+@import "components/tags";
+@import "components/mainbanner";
 
-@import "./pages/about";
-@import "./components/realestate";
-@import "./pages/error";
-@import "./pages/singleproduct";
+@import "layout/navigation";
+@import "layout/footer";
+
+@import "pages/about";
+@import "pages/error";
+@import "pages/singleproduct";
