--- a/src/styles/compiled/index.css
+++ b/src/styles/compiled/index.css
@@ -300,6 +300,34 @@ h2.thumb__title {
   }
 }
 
+@media only screen and (min-width: 768px) {
+  .home__products {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 40px;
+    row-gap: 20px;
+    margin-top: 40px;
+  }
+}
+@media only screen and (min-width: 992px) {
+  .home__products {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 50px;
+    row-gap: 30px;
+    background: #f7f7f7;
+    padding: 50px;
+    border-radius: 25px;
+    margin-bottom: 40px;
+  }
+}
+@media only screen and (min-width: 1240px) {
+  .home__products {
+    row-gap: 40px;
+    column-gap: 60px;
+  }
+}
+
 .server {
   display: flex;
   justify-content: flex-end;
@@ -655,34 +683,6 @@ h2.thumb__title {
   }
 }
 
-@media only screen and (min-width: 768px) {
-  .home__products {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    column-gap: 40px;
-    row-gap: 20px;
-    margin-top: 40px;
-  }
-}
-@media only screen and (min-width: 992px) {
-  .home__products {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    column-gap: 50px;
-    row-gap: 30px;
-    background: #f7f7f7;
-    padding: 50px;
-    border-radius: 25px;
-    margin-bottom: 40px;
-  }
-}
-@media only screen and (min-width: 1240px) {
-  .home__products {
-    row-gap: 40px;
-    column-gap: 60px;
-  }
-}
-
 .error {
   display: flex;
   justify-content: center;
@@ -691,7 +691,35 @@ h2.thumb__title {
   height: 100%;
   width: 100%;
 }
-.error__number {
+.error__text {
+  width: 100%;
+  text-align: center;
+  font-size: 20px;
+  color: #ff6060;
+  margin-bottom: 142px;
+}
+@media only screen and (min-width: 320px) {
+  .error__text {
+    font-size: 20px;
+  }
+}
+@media only screen and (min-width: 768px) {
+  .error__text {
+    font-size: 30px;
+  }
+}
+@media only screen and (min-width: 992px) {
+  .error__text {
+    font-size: 36px;
+  }
+}
+.error__link {
+  font-size: 18px;
+  color: #ff6060;
+  margin: 42px;
+}
+
+.error-logo {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
@@ -706,17 +734,12 @@ h2.thumb__title {
   font-weight: 700;
   font-size: 288px;
 }
-.error__text {
-  width: 100%;
-  text-align: center;
-  font-size: 36px;
-  color: #ff6060;
-  margin-bottom: 142px;
-}
-.error__link {
-  font-size: 18px;
-  color: #ff6060;
-  margin: 42px;
+@media only screen and (max-width: 768px) {
+  .error-logo {
+    width: 259px;
+    height: 131px;
+    padding-left: inherit;
+  }
 }
 
 .singleproduct {
