--- a/src/styles/pages/_error.scss
+++ b/src/styles/pages/_error.scss
@@ -6,28 +6,21 @@
   height: 100%;
   width: 100%;
   
-  &__number {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    align-content: space-around;
-    color: $primary-color;
-    margin: 66px;
-    padding-left: 110px;
-    width: 599px;
-    height: 263px;
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 288px;
-  }
-  
   &__text {
     width: 100%;
     text-align: center;
-    font-size: 36px;
+    font-size: 20px;
     color: $primary-color;
     margin-bottom: 142px;
+    @include media-query(small){
+      font-size: 20px;
+    }
+    @include media-query (medium){
+      font-size: 30px;
+    }
+    @include media-query(large){
+      font-size: 36px;
+    }
   }
   &__link {
     font-size: 18px;
@@ -35,7 +28,26 @@
     margin: 42px;
   }
 }
-  
+.error-logo {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-content: space-around;
+  color: $primary-color;
+  margin: 66px;
+  padding-left: 110px;
+  width: 599px;
+  height: 263px;
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 288px;
+  @media only screen and (max-width:768px){
+    width: 259px;
+    height: 131px;
+    padding-left: inherit;
+  }
+}  
 
 
 
