--- a/src/styles/compiled/index.css
+++ b/src/styles/compiled/index.css
@@ -5,11 +5,10 @@
 }
 
 body {
-  margin: 0;
   font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  max-width: 100%;
+  max-width: 1400px;
   margin: auto;
   position: relative;
   min-height: 100vh;
@@ -743,7 +742,7 @@ h2.thumb__title {
 }
 
 .singleproduct {
-  margin: 0 5%;
+  margin: 0 7%;
   color: #ff6060;
 }
 .singleproduct__content {
