--- a/src/styles/utils/_settings.scss
+++ b/src/styles/utils/_settings.scss
@@ -6,13 +6,12 @@
 }
   
 body {
-  margin: 0;
   font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI",
     "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
     "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  max-width: 100%;
+  max-width: 1400px;
   margin: auto;
   position: relative;
   min-height: 100vh;
