--- a/src/styles/pages/_singleproduct.scss
+++ b/src/styles/pages/_singleproduct.scss
@@ -84,22 +84,10 @@
     @include media-query(large){
         margin: 2% 7% -6% 7%;
     }
+    // Pour la navbar de la page d'accueil
     @media screen and (min-width:320px) {
-        margin: 2% 9% 2% 9%;
-    }
-    @media screen and (min-width:375px) {
-        margin: 2% 9% 2% 9%;
-    }
-    @media screen and (min-width:425px) {
-        margin: 2% 10% 2% 10%;
-    }
-    @media only screen and (min-width:768px){
-        margin: 2% 9% 2% 9%;
-    }
-    @media screen and (min-width:992px) {
         margin: 2% 5% 2% 5%;
-    }
-    
+    }    
 }
 
 .singleproduct {
