--- a/src/styles/compiled/index.css
+++ b/src/styles/compiled/index.css
@@ -156,9 +156,23 @@ li {
   transform-origin: bottom -25%;
   translate: -50% -16%;
 }
+@media only screen and (min-width: 320px) {
+  .collapse__arrow {
+    width: 17px;
+    height: 9px;
+    margin-right: -11px;
+  }
+}
+@media screen and (min-width: 375x) {
+  .collapse__arrow {
+    margin-right: -9px;
+  }
+}
 @media only screen and (min-width: 768px) {
   .collapse__arrow {
+    width: 21px;
     height: 13px;
+    margin-right: -7px;
   }
 }
 @media only screen and (min-width: 992px) {
@@ -559,9 +573,19 @@ h2.thumb__title {
     height: 390px;
   }
 }
+@media screen and (min-width: 1065px) {
+  .slider__picture {
+    width: 977px;
+  }
+}
 @media screen and (min-width: 1100px) {
   .slider__picture {
     width: 1010px;
+  }
+}
+@media screen and (min-width: 1140px) {
+  .slider__picture {
+    width: 1046px;
   }
 }
 @media screen and (min-width: 1160px) {
@@ -1340,6 +1364,11 @@ a:hover {
   }
 }
 @media screen and (min-width: 320px) {
+  .navbar {
+    margin: 2% 8% 2% 8%;
+  }
+}
+@media only screen and (min-width: 992px) {
   .navbar {
     margin: 2% 5% 2% 5%;
   }
