--- a/src/styles/components/_collapse.scss
+++ b/src/styles/components/_collapse.scss
@@ -45,9 +45,18 @@
         transition: transform 300ms;
         transform-origin: bottom -25%;
         translate: -50% -16%;
-
+        @include media-query(small){
+            width: 17px;
+            height: 9px;
+            margin-right: -11px;
+        }
+        @media screen and (min-width:375x){
+            margin-right: -9px;
+        }
         @include media-query(medium) {
+            width: 21px;
             height: 13px;
+            margin-right: -7px;
         }
         @include media-query(large) {
             height: 17px;
