--- a/src/styles/components/_slider.scss
+++ b/src/styles/components/_slider.scss
@@ -115,9 +115,17 @@
         width: 941px;
         height: 390px;
     }
+    @media screen and (min-width:1065px){
+        width: 977px;
+    }
+
     @media screen and (min-width:1100px) {
         width: 1010px;
     }
+    @media screen and (min-width:1140px){
+        width: 1046px;
+    }
+
     @media screen and (min-width:1160px) {
         width: 1067px;
     }
