--- a/src/styles/pages/_singleproduct.scss
+++ b/src/styles/pages/_singleproduct.scss
@@ -86,8 +86,11 @@
     }
     // Pour la navbar de la page d'accueil
     @media screen and (min-width:320px) {
+        margin: 2% 8% 2% 8%;
+    } 
+    @include media-query(large){
         margin: 2% 5% 2% 5%;
-    }    
+    }   
 }
 
 .singleproduct {
